<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission_rgk" translatable="false">com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS_RGK</string>
    <string name="receive_first_load_broadcast_permission_rgk" translatable="false">com.android.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST_RGK</string>
    <string name="application_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Go to <xliff:g example="Play Store" id="query">%1$s</xliff:g></string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$s</xliff:g> column <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g example="Game" id="name">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g example="2" id="number">%1$s</xliff:g> height <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="rgk_launcher">RLauncher</string>
    <string name="shuiadongqiegemiaoshu">播放时甩动手机切换到下一首</string>
    <string name="pingmudianliangshiaidongy6ouxiao">屏幕点亮时甩动有效</string>
    <string name="bimianwushengxiao">仅亮屏时有效，避免颠簸误生效</string>
    <string name="y6ouy6ay6iny6uexiangshouy6ouy6a">优雅音乐，享受优雅</string>
    <string name="musict5ext5">music</string>
    <string name="gequ222">歌曲 | 222</string>
    <string name="gesghou111">歌手 | 111</string>
    <string name="zhuanji2t5t5">专辑 | 255</string>
    <string name="quedingeee">确定</string>
    <string name="total_time">03:20</string>
    <string name="allmusic">999</string>
    <string name="fengexian">/</string>
    <string name="currentId">0</string>
    <string name="current_time">00:00</string>
    <string name="musicname">优雅音乐，享受优雅</string>
    <string name="sinername">优雅音乐</string>
    <string name="about">关于</string>
    <string name="app_name">Sate Lite</string>
    <string name="recent">Recent</string>
    <string name="frequent">Frequent</string>
    <string name="toolbox">Tools</string>
    <string name="ok_title">Ok</string>
    <string name="cancel_title">Cancel</string>
    <string name="rgk_flash">com.well.swipe.action.flash</string>
    <string name="rgk_wifi">com.well.swipe.action.wifi</string>
    <string name="rgk_screenbrightness">com.well.swipe.action.screenbrightness</string>
    <string name="rgk_calculator">com.well.swipe.action.calculator</string>
    <string name="rgk_flightmode">com.well.swipe.action.flightmode</string>
    <string name="rgk_rgksetting">com.well.swipe.action.rgksetting</string>
    <string name="rgk_bluetooth">com.well.swipe.action.bluetooth</string>
    <string name="rgk_mute">com.well.swipe.action.mute</string>
    <string name="rgk_autorotation">com.well.swipe.action.autorotation</string>
    <string name="rgk_setting">com.well.swipe.action.setting</string>
    <string name="rgk_flash_title">Flashlight</string>
    <string name="rgk_wifi_title">Wi-Fi</string>
    <string name="rgk_screenbrightness_title">Brightness</string>
    <string name="rgk_data_title">Data</string>
    <string name="rgk_calculator_title">Calculator</string>
    <string name="rgk_flightmode_title">Airplane mode</string>
    <string name="rgk_bluetooth_title">Bluetooth</string>
    <string name="rgk_mute_title">Sound</string>
    <string name="rgk_autorotation_title">Rotation</string>
    <string name="rgk_setting_title">Settings</string>
    <string name="rgk_edit_header_title">selected(%1$s/%2$s)</string>
    <string name="favorite_up_to_9">up to 9</string>
    <string name="scene_mode_0">Vibrator</string>
    <string name="scene_mode_1">Muted</string>
    <string name="scene_mode_2">volume</string>
    <string name="rgk_advanced_setting">Advanced Settings</string>
    <string name="feedback_title">fill in the title</string>
    <string name="feedback_content">fill in the content</string>
    <string name="flash_on">Flashlight is turned on</string>
    <string name="flash_off">Flashlight is turned off</string>
    <string name="wifi_on">WiFi is connected</string>
    <string name="wifi_off">WiFi is disconnected</string>
    <string name="bluetooth_on">bluetooth is turned on</string>
    <string name="bluetooth_off">bluetooth is turned off</string>
    <string name="t9_app_name">MyT9Search</string>
    <string name="app_can_not_be_launched_directly">该应用无法被直接启动</string>
    <string name="the_app_has_been_launched">该应用已经打开</string>
    <string name="can_not_to_uninstall_yourself">无法卸载自己</string>
    <string name="long_click_start_voice">长按可语音搜索应用</string>
    <string name="SingleMode_button_text">SingleMode</string>
    <string name="SingleMode_switch_text">单层结构</string>
    <string name="freeze">Freeze App</string>
    <string name="app_freeze_dialog_message">Are you sure freeze the %1$s app?</string>
    <string name="app_unfreeze_dialog_message">Are you sure unfreeze the %1$s app?</string>
    <string name="toast_app_freeze_success">%1$s is freezed successful</string>
    <string name="toast_app_unfreeze_success">%1$s is unfreezed successful</string>
    <string name="naming_error">This folder already exists</string>
</resources>